--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "Cy:open": "cypress open",
     "Cy:open:mobile": "Cypress open --config viewportWidth=410,viewportHeight=860",
     "Cy:run": "cypress run",
-    "test:mobile": "cypress run --config viewportWidth=410,viewportHeight=860"
+    "test:mobile": "cypress run --config viewportWidth=410,viewportHeight=860",
+    "test:cloud": " npx cypress run --record"
   },
   "repository": {
     "type": "git",
